--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Angular</title>
   </head>
   <body>
-    <h1>Hello Angular !</h1>
+    <h1>Este curso me va a gustar</h1>
   </body>
 </html>
