--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Hello Angular</title>
   </head>
   <body>
-    <h1>ESTE CURSO VA A SER MUY INTERESANTE</h1>
+    <h1>HELLO WORLD</h1>
   </body>
 </html>
